feat: add analytics pnl timeline split